--- a/about.html
+++ b/about.html
@@ -8,11 +8,11 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="keywords" content="Pet care, Cuttack, Odisha" />
+  <meta name="description" content="Cuttack's Pet Care is your one-stop destination for all pet-related services in Cuttack, Odisha. We provide top-notch care for your furry friends!" />
+  <meta name="author" content="Cuttack's Pet Care" />
 
-  <title>Drool</title>
+  <title>Cuttack's Pet Care</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -25,318 +25,239 @@
   <link href="css/responsive.css" rel="stylesheet" />
 </head>
 
-<body class="sub_page">
+<body>
   <div class="hero_area ">
-    <!-- header section strats -->
+    <!-- header section starts -->
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="">
           </a>
-          <div class="" id="">
-            <div class="User_option">
-              <form class="form-inline my-2  mb-3 mb-lg-0">
-                <input type="search" placeholder="Search">
-                <button class="btn   my-sm-0 nav_search-btn" type="submit"></button>
-              </form>
-            </div>
-
-            <div class="custom_menu-btn">
-              <button onclick="openNav()">
-                <span class="s-1">
-
-                </span>
-                <span class="s-2">
-
-                </span>
-                <span class="s-3">
-
-                </span>
-              </button>
-            </div>
-            <div id="myNav" class="overlay">
-              <div class="overlay-content">
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact Us</a>
-              </div>
-            </div>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact Us</a>
+              </li>
+            </ul>
           </div>
         </nav>
       </div>
     </header>
     <!-- end header section -->
-  </div>
 
-  <!-- about section -->
+    <!-- slider section -->
+    <section class="slider_section">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md-5 offset-md-1">
+                  <div class="detail-box">
+                    <div class="number">
+                      <h5>01</h5>
+                    </div>
+                    <h1>
+                      Cuttack's Pet Care<br>
+                      <span>Best Care for Your Furry Friends</span>
+                    </h1>
+                    <p>
+                      We provide the best pet care services in Cuttack, offering grooming, training, and nutrition advice tailored just for your pets.
+                    </p>
+                    <div class="btn-box">
+                      <a href="" class="btn-1">Read More</a>
+                      <a href="" class="btn-2">Contact Us</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="img-box">
+                    <img src="images/slider-img.png" alt="">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Other carousel items remain the same -->
+        </div>
+      </div>
+    </section>
+    <!-- end slider section -->
 
-  <section class="about_section layout_padding">
-    <div class="container">
-      <div class="detail-box">
+    <!-- about section -->
+    <section class="about_section layout_padding">
+      <div class="container">
+        <div class="detail-box">
+          <div class="heading_container">
+            <img src="images/heading-img.png" alt="">
+            <h2>About Us</h2>
+          </div>
+          <p>
+            Cuttack's Pet Care is a trusted name for pet owners in Odisha. We ensure your pets are happy, healthy, and well-groomed. Our experienced team is dedicated to providing top-notch services for pets in and around Cuttack.
+          </p>
+          <div class="btn-box">
+            <a href="">
+              <span>Read More</span>
+              <img src="images/link-arrow.png" alt="">
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end about section -->
+
+    <!-- pricing section -->
+    <section class="food_section layout_padding">
+      <div class="container">
         <div class="heading_container">
           <img src="images/heading-img.png" alt="">
-          <h2>
-            About Us
-          </h2>
+          <h2>Our Pet Packages</h2>
+          <p>Affordable pricing tailored for pet owners in Cuttack.</p>
         </div>
-        <p>
-          It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,
-        </p>
-        <div class="btn-box">
-          <a href="">
-            <span>
-              Read More
-            </span>
-            <img src="images/link-arrow.png" alt="">
-          </a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end about section -->
-
-  <!-- animal section -->
-
-  <section class="animal_section layout_padding">
-    <div class="container">
-      <div class="animal_container">
-        <div class="box b1">
-          <div class="img-box">
-            <img src="images/dog.jpg" alt="">
-          </div>
-          <div class="detail-box">
-            <h5>
-              Cute Dog
-            </h5>
-            <p>
-              It is a long established fact that a reader will be distracted by
-            </p>
-          </div>
-        </div>
-        <div class="box b2">
-          <div class="img-box">
-            <img src="images/bird.jpg" alt="">
-          </div>
-          <div class="detail-box">
-            <h5>
-              Birds
-            </h5>
-            <p>
-              It is a long established fact that a reader will be distracted by
-            </p>
-          </div>
-        </div>
-        <div class="box b1">
-          <div class="img-box">
-            <img src="images/fish.jpg" alt="">
-          </div>
-          <div class="detail-box">
-            <h5>
-              Fish
-            </h5>
-            <p>
-              It is a long established fact that a reader will be distracted by
-            </p>
-          </div>
-        </div>
-        <div class="box b2">
-          <div class="img-box">
-            <img src="images/cat.jpg" alt="">
-          </div>
-          <div class="detail-box">
-            <h5>
-              Cat Bite
-            </h5>
-            <p>
-              It is a long established fact that a reader will be distracted by
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end animal section -->
-
-  <!-- us section -->
-
-  <section class="us_section layout_padding">
-    <div class="container">
-      <div class="heading_container">
-        <img src="images/heading-img.png" alt="">
-        <h2>
-          Why Choose Us
-        </h2>
-        <p>
-          It is a long established fact that a reader will be distracted by the readable content of a
-        </p>
-      </div>
-      <div class="us_container">
-        <div class="box">
-          <div class="img1-box">
-            <img src="images/pet1.png" alt="">
-          </div>
-          <div class="img2-box">
-            <img src="images/omega.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h6>
-              PET NUTRITIONISTS
-            </h6>
-          </div>
-        </div>
-        <div class="box">
-          <div class="img1-box">
-            <img src="images/pet2.png" alt="">
-          </div>
-          <div class="img2-box">
-            <img src="images/dog.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h6>
-              STANDARDS
-            </h6>
-          </div>
-        </div>
-        <div class="box">
-          <div class="img1-box">
-            <img src="images/pet2.png" alt="">
-          </div>
-          <div class="img2-box">
-            <img src="images/shield.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h6>
-              QUALITY & SAFETY
-            </h6>
-          </div>
-        </div>
-      </div>
-      <div class="btn-box">
-        <a href="">
-          <span>
-            Read More
-          </span>
-          <img src="images/link-arrow.png" alt="">
-        </a>
-      </div>
-    </div>
-  </section>
-
-  <!-- end us section -->
-
-
-  <!-- info section -->
-  <section class="info_section ">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 col-lg-3">
-          <div class="info_contact">
-            <h5>
-              CONTACT INFO
-            </h5>
-            <div>
-              <img src="images/call.png" alt="" />
-              <p>
-                +01 1234567890
-              </p>
+        <div class="food_container">
+          <div class="box">
+            <div class="img-box">
+              <img src="images/f1.png" alt="">
             </div>
-            <div>
-              <img src="images/mail.png" alt="" />
-              <p>
-                demo@gmail.com
-              </p>
+            <div class="detail-box">
+              <h6>Basic</h6>
+              <h3>₹500</h3>
+              <a href="">Buy Now</a>
+            </div>
+          </div>
+          <div class="box">
+            <div class="img-box">
+              <img src="images/f2.png" alt="">
+            </div>
+            <div class="detail-box">
+              <h6>Medium</h6>
+              <h3>₹1000</h3>
+              <a href="">Buy Now</a>
+            </div>
+          </div>
+          <div class="box">
+            <div class="img-box">
+              <img src="images/f3.png" alt="">
+            </div>
+            <div class="detail-box">
+              <h6>Standard</h6>
+              <h3>₹1500</h3>
+              <a href="">Buy Now</a>
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-3">
-          <div class="info_time">
-            <h5>
-              Opening Hours Shop
-            </h5>
-            <div>
-              <p>
-                Monday to friday
-              </p>
-            </div>
-            <div>
-              <p>
-                07:00 am to 04:00 pm
-              </p>
-            </div>
-          </div>
-        </div>
+      </div>
+    </section>
+    <!-- end pricing section -->
 
-        <div class="col-md-6 col-lg-3">
-          <div class="info_social">
-            <h5>
-              social media
-            </h5>
-            <div class="social_container">
-              <div>
-                <a href="">
-                  <img src="images/fb.png" alt="" />
-                </a>
+    <!-- contact section -->
+    <section class="contact_section layout_padding-top">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-5 offset-md-1">
+            <div class="form_container">
+              <div class="heading_container">
+                <img src="images/heading-img.png" alt="">
+                <h2>Request A Call Back</h2>
+                <p>We are here to answer any questions you may have about our services.</p>
               </div>
-              <div>
-                <a href="">
-                  <img src="images/twitter.png" alt="" />
-                </a>
-              </div>
-              <div>
-                <a href="">
-                  <img src="images/linkedin.png" alt="" />
-                </a>
-              </div>
-              <div>
-                <a href="">
-                  <img src="images/instagram.png" alt="" />
-                </a>
+              <form action="">
+                <div>
+                  <input type="text" placeholder="Full Name " />
+                </div>
+                <div>
+                  <input type="text" placeholder="Phone number" />
+                </div>
+                <div>
+                  <input type="email" placeholder="Email" />
+                </div>
+                <div>
+                  <input type="text" class="message-box" placeholder="Message" />
+                </div>
+                <div class="d-flex ">
+                  <button>SEND</button>
+                </div>
+              </form>
+            </div>
+          </div>
+          <div class="col-md-6 px-0">
+            <div class="map_container">
+              <div class="map-responsive">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.567797191393!2d86.08420031540347!3d20.46252108630316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a1909a2c2b5b4f1%3A0x9e0c7b7c9d9d6d1e!2sCuttack%2C%20Odisha%20753012!5e0!3m2!1sen!2sin!4v1682088249985!5m2!1sen!2sin" width="600" height="300" frameborder="0" style="border:0; width: 100%; height:100%" allowfullscreen loading="lazy"></iframe>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-3">
-          <div class="info_form pl-lg-4">
-            <h5>
-              Newsletter
-            </h5>
-            <form action="">
-              <input type="text" placeholder="Enter Your Email" />
-              <button type="submit">
-                Subscribe
-              </button>
-            </form>
+      </div>
+    </section>
+    <!-- end contact section -->
+
+    <!-- info section -->
+    <section class="info_section ">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-lg-3">
+            <div class="info_contact">
+              <h5>CONTACT INFO</h5>
+              <div>
+                <img src="images/call.png" alt="" />
+                <p>+91 9876543210</p>
+              </div>
+              <div>
+                <img src="images/mail.png" alt="" />
+                <p>support@cuttackpetcare.com</p>
+              </div>
+            </div>
           </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="info_time">
+              <h5>Opening Hours</h5>
+              <p>Monday to Saturday</p>
+              <p>9:00 AM to 6:00 PM</p>
+            </div>
+          </div>
+          <!-- Other sections remain similar -->
         </div>
       </div>
-    </div>
-  </section>
+    </section>
+    <!-- end info section -->
 
-  <!-- end info_section -->
+    <!-- footer section -->
+    <section class="container-fluid footer_section ">
+      <p>
+        &copy; 2025 All Rights Reserved. Design by
+        <a href="https://html.design/">Free Html Templates</a>
+      </p>
+    </section>
+    <!-- end footer section -->
 
-
-  <!-- footer section -->
-  <section class="container-fluid footer_section ">
-    <p>
-      &copy; 2019 All Rights Reserved. Design by
-      <a href="https://html.design/">Free Html Templates</a>
-    </p>
-  </section>
-  <!-- end  footer section -->
-
-
-  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.js"></script>
-  <script>
-    function openNav() {
-      document.getElementById("myNav").classList.toggle("menu_width")
-      document.querySelector(".custom_menu-btn").classList.toggle("menu_btn-style")
-    }
-  </script>
-
+    <!-- JS files -->
+    <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="js/popper.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script>
+      function openNav() {
+        document.getElementById("myNav").classList.toggle("menu_width");
+        document.querySelector(".custom_menu-btn").classList.toggle("menu_btn-style");
+      }
+    </script>
+  </div>
 </body>
 
 </html>
