--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
   <meta name="keywords" content="Pet care, Cuttack, Odisha" />
-  <meta name="description" content="Cuttack's Pet Care is your one-stop destination for all pet-related services in Cuttack, Odisha. We provide top-notch care for your furry friends!" />
+  <meta name="description" content="Cuttack's Pet Care is your trusted pet care service provider in Cuttack, Odisha. We provide grooming, training, and nutritional care for your pets, with timings that suit your daily routine!" />
   <meta name="author" content="Cuttack's Pet Care" />
 
   <title>Cuttack's Pet Care</title>
@@ -78,7 +78,7 @@
                       <span>Best Care for Your Furry Friends</span>
                     </h1>
                     <p>
-                      We provide the best pet care services in Cuttack, offering grooming, training, and nutrition advice tailored just for your pets.
+                      Offering the best pet care services in Cuttack with grooming, training, and nutritional support tailored for your pets.
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn-1">Read More</a>
@@ -109,7 +109,7 @@
             <h2>About Us</h2>
           </div>
           <p>
-            Cuttack's Pet Care is a trusted name for pet owners in Odisha. We ensure your pets are happy, healthy, and well-groomed. Our experienced team is dedicated to providing top-notch services for pets in and around Cuttack.
+            Cuttack's Pet Care is the go-to destination for pet owners in Odisha. We ensure your pets are happy, healthy, and well-groomed. Our experienced team is dedicated to providing the best services for pets in and around Cuttack, Odisha.
           </p>
           <div class="btn-box">
             <a href="">
@@ -128,7 +128,7 @@
         <div class="heading_container">
           <img src="images/heading-img.png" alt="">
           <h2>Our Pet Packages</h2>
-          <p>Affordable pricing tailored for pet owners in Cuttack.</p>
+          <p>Affordable pricing for pet care services customized for Cuttack residents.</p>
         </div>
         <div class="food_container">
           <div class="box">
@@ -175,7 +175,7 @@
               <div class="heading_container">
                 <img src="images/heading-img.png" alt="">
                 <h2>Request A Call Back</h2>
-                <p>We are here to answer any questions you may have about our services.</p>
+                <p>Feel free to reach out for any questions or concerns about your pets.</p>
               </div>
               <form action="">
                 <div>
@@ -229,10 +229,9 @@
             <div class="info_time">
               <h5>Opening Hours</h5>
               <p>Monday to Saturday</p>
-              <p>9:00 AM to 6:00 PM</p>
+              <p>10:00 AM to 7:00 PM (IST)</p>
             </div>
           </div>
-          <!-- Other sections remain similar -->
         </div>
       </div>
     </section>
@@ -251,12 +250,6 @@
     <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="js/popper.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script>
-      function openNav() {
-        document.getElementById("myNav").classList.toggle("menu_width");
-        document.querySelector(".custom_menu-btn").classList.toggle("menu_btn-style");
-      }
-    </script>
   </div>
 </body>
 
