--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="Pet care, Cuttack, Odisha" />
-  <meta name="description" content="Cuttack's Pet Care is your trusted pet care service provider in Cuttack, Odisha. We provide grooming, training, and nutritional care for your pets, with timings that suit your daily routine!" />
+  <meta name="keywords" content="Pet care, Cuttack, Odisha, grooming, training, veterinary services" />
+  <meta name="description" content="Cuttack's Pet Care offers grooming, training, veterinary services, and nutritional advice for your pets in Cuttack, Odisha. Providing the best care for your furry companions!" />
   <meta name="author" content="Cuttack's Pet Care" />
 
   <title>Cuttack's Pet Care</title>
@@ -40,13 +40,13 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="#home-section">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link" href="#about-section">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact Us</a>
+                <a class="nav-link" href="#contact-section">Contact Us</a>
               </li>
             </ul>
           </div>
@@ -56,7 +56,7 @@
     <!-- end header section -->
 
     <!-- slider section -->
-    <section class="slider_section">
+    <section class="slider_section" id="home-section">
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -78,11 +78,11 @@
                       <span>Best Care for Your Furry Friends</span>
                     </h1>
                     <p>
-                      Offering the best pet care services in Cuttack with grooming, training, and nutritional support tailored for your pets.
+                      Offering the best pet care services in Cuttack with grooming, training, veterinary care, and nutritional advice tailored for your pets.
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn-1">Read More</a>
-                      <a href="" class="btn-2">Contact Us</a>
+                      <a href="#about-section" class="btn-1">Read More</a>
+                      <a href="#contact-section" class="btn-2">Contact Us</a>
                     </div>
                   </div>
                 </div>
@@ -101,7 +101,7 @@
     <!-- end slider section -->
 
     <!-- about section -->
-    <section class="about_section layout_padding">
+    <section class="about_section layout_padding" id="about-section">
       <div class="container">
         <div class="detail-box">
           <div class="heading_container">
@@ -109,11 +109,20 @@
             <h2>About Us</h2>
           </div>
           <p>
-            Cuttack's Pet Care is the go-to destination for pet owners in Odisha. We ensure your pets are happy, healthy, and well-groomed. Our experienced team is dedicated to providing the best services for pets in and around Cuttack, Odisha.
+            Cuttack's Pet Care is the leading pet care provider in Odisha, specializing in grooming, training, veterinary services, and nutritional consultation. We believe in creating a stress-free environment for your pets while ensuring they receive the best care possible. Our services are tailored to meet the unique needs of each pet, from playful puppies to senior companions.
+          </p>
+          <p>
+            **Our Services Include:**
+            <ul>
+              <li><strong>Grooming:</strong> Full-service grooming to keep your pets clean, healthy, and stylish.</li>
+              <li><strong>Training:</strong> Professional training programs to teach obedience, tricks, and behavioral improvement.</li>
+              <li><strong>Veterinary Services:</strong> Regular health check-ups, vaccinations, and emergency care are available on-site.</li>
+              <li><strong>Nutrition Advice:</strong> Personalized diet plans to ensure your pets stay fit and healthy.</li>
+            </ul>
           </p>
           <div class="btn-box">
             <a href="">
-              <span>Read More</span>
+              <span>Learn More</span>
               <img src="images/link-arrow.png" alt="">
             </a>
           </div>
@@ -122,52 +131,8 @@
     </section>
     <!-- end about section -->
 
-    <!-- pricing section -->
-    <section class="food_section layout_padding">
-      <div class="container">
-        <div class="heading_container">
-          <img src="images/heading-img.png" alt="">
-          <h2>Our Pet Packages</h2>
-          <p>Affordable pricing for pet care services customized for Cuttack residents.</p>
-        </div>
-        <div class="food_container">
-          <div class="box">
-            <div class="img-box">
-              <img src="images/f1.png" alt="">
-            </div>
-            <div class="detail-box">
-              <h6>Basic</h6>
-              <h3>₹500</h3>
-              <a href="">Buy Now</a>
-            </div>
-          </div>
-          <div class="box">
-            <div class="img-box">
-              <img src="images/f2.png" alt="">
-            </div>
-            <div class="detail-box">
-              <h6>Medium</h6>
-              <h3>₹1000</h3>
-              <a href="">Buy Now</a>
-            </div>
-          </div>
-          <div class="box">
-            <div class="img-box">
-              <img src="images/f3.png" alt="">
-            </div>
-            <div class="detail-box">
-              <h6>Standard</h6>
-              <h3>₹1500</h3>
-              <a href="">Buy Now</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- end pricing section -->
-
     <!-- contact section -->
-    <section class="contact_section layout_padding-top">
+    <section class="contact_section layout_padding-top" id="contact-section">
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-5 offset-md-1">
