--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="Pet care, Cuttack, Odisha, grooming, training, veterinary services, adoption, blog, pet shop" />
-  <meta name="description" content="Cuttack's Pet Care is your one-stop destination for all pet-related needs in Cuttack, Odisha. From grooming and training to veterinary care, adoption, and pet products, we provide the best services to ensure your pets are happy and healthy!" />
+  <meta name="keywords" content="Pet care, Cuttack, Odisha, grooming, training, veterinary services" />
+  <meta name="description" content="Cuttack's Pet Care offers grooming, training, veterinary services, and nutritional advice for your pets in Cuttack, Odisha. Providing the best care for your furry companions!" />
   <meta name="author" content="Cuttack's Pet Care" />
 
   <title>Cuttack's Pet Care</title>
@@ -31,7 +31,7 @@
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container">
-          <a class="navbar-brand" href="#home-section">
+          <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,24 +44,6 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#about-section">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#services-section">Services</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#testimonials-section">Testimonials</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#gallery-section">Gallery</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#blog-section">Blog</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#team-section">Our Team</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#faq-section">FAQs</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#contact-section">Contact Us</a>
@@ -80,6 +62,7 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -92,13 +75,13 @@
                     </div>
                     <h1>
                       Cuttack's Pet Care<br>
-                      <span>Where Pets Are Family</span>
+                      <span>Best Care for Your Furry Friends</span>
                     </h1>
                     <p>
-                      Providing premium pet care services including grooming, training, veterinary care, and adoption support in Cuttack, Odisha.
+                      Offering the best pet care services in Cuttack with grooming, training, veterinary care, and nutritional advice tailored for your pets.
                     </p>
                     <div class="btn-box">
-                      <a href="#services-section" class="btn-1">Our Services</a>
+                      <a href="#about-section" class="btn-1">Read More</a>
                       <a href="#contact-section" class="btn-2">Contact Us</a>
                     </div>
                   </div>
@@ -111,7 +94,7 @@
               </div>
             </div>
           </div>
-          <!-- Add more slides if needed -->
+          <!-- Other carousel items remain the same -->
         </div>
       </div>
     </section>
@@ -126,191 +109,112 @@
             <h2>About Us</h2>
           </div>
           <p>
-            At Cuttack's Pet Care, we are passionate about creating a safe, nurturing, and fun environment for your pets. From professional grooming to expert veterinary services, we ensure your furry friends are cared for like family. Our team of pet care experts is committed to providing top-notch services tailored to your pet's unique needs.
+            Cuttack's Pet Care is the leading pet care provider in Odisha, specializing in grooming, training, veterinary services, and nutritional consultation. We believe in creating a stress-free environment for your pets while ensuring they receive the best care possible. Our services are tailored to meet the unique needs of each pet, from playful puppies to senior companions.
           </p>
+          <p>
+            **Our Services Include:**
+            <ul>
+              <li><strong>Grooming:</strong> Full-service grooming to keep your pets clean, healthy, and stylish.</li>
+              <li><strong>Training:</strong> Professional training programs to teach obedience, tricks, and behavioral improvement.</li>
+              <li><strong>Veterinary Services:</strong> Regular health check-ups, vaccinations, and emergency care are available on-site.</li>
+              <li><strong>Nutrition Advice:</strong> Personalized diet plans to ensure your pets stay fit and healthy.</li>
+            </ul>
+          </p>
+          <div class="btn-box">
+            <a href="">
+              <span>Learn More</span>
+              <img src="images/link-arrow.png" alt="">
+            </a>
+          </div>
         </div>
       </div>
     </section>
     <!-- end about section -->
 
-    <!-- services section -->
-    <section class="services_section layout_padding" id="services-section">
-      <div class="container">
-        <div class="heading_container">
-          <h2>Our Services</h2>
-        </div>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="service-box">
-              <h4>Grooming</h4>
-              <p>Professional grooming services to keep your pets clean and healthy.</p>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="service-box">
-              <h4>Training</h4>
-              <p>Expert training programs to improve your pet's behavior and teach new tricks.</p>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="service-box">
-              <h4>Veterinary Care</h4>
-              <p>Comprehensive veterinary services, including health check-ups and vaccinations.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- end services section -->
-
-    <!-- testimonials section -->
-    <section class="testimonials_section layout_padding" id="testimonials-section">
-      <div class="container">
-        <div class="heading_container">
-          <h2>What Our Customers Say</h2>
-        </div>
-        <div class="testimonial-carousel">
-          <div class="testimonial">
-            <p>"Cuttack's Pet Care has been amazing for my dog! The grooming services are top-notch, and the staff is super friendly."</p>
-            <h5>- Ramesh Kumar</h5>
-          </div>
-          <div class="testimonial">
-            <p>"I love how professional they are here. My cat enjoyed her grooming session, and I recommend them highly!"</p>
-            <h5>- Priya Singh</h5>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- end testimonials section -->
-
-    <!-- gallery section -->
-    <section class="gallery_section layout_padding" id="gallery-section">
-      <div class="container">
-        <div class="heading_container">
-          <h2>Our Happy Pets</h2>
-        </div>
-        <div class="row">
-          <div class="col-md-3">
-            <img src="images/gallery1.jpg" alt="Pet 1" class="img-fluid">
-          </div>
-          <div class="col-md-3">
-            <img src="images/gallery2.jpg" alt="Pet 2" class="img-fluid">
-          </div>
-          <div class="col-md-3">
-            <img src="images/gallery3.jpg" alt="Pet 3" class="img-fluid">
-          </div>
-          <div class="col-md-3">
-            <img src="images/gallery4.jpg" alt="Pet 4" class="img-fluid">
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- end gallery section -->
-
-    <!-- blog section -->
-    <section class="blog_section layout_padding" id="blog-section">
-      <div class="container">
-        <div class="heading_container">
-          <h2>Latest Blogs</h2>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="blog-box">
-              <h4>10 Tips for Grooming Your Dog at Home</h4>
-              <p>Learn how to groom your dog like a pro with these simple tips...</p>
-              <a href="#">Read More</a>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="blog-box">
-              <h4>How to Train Your Cat to Be More Obedient</h4>
-              <p>Discover the secrets to training your feline companion...</p>
-              <a href="#">Read More</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- end blog section -->
-
-    <!-- team section -->
-    <section class="team_section layout_padding" id="team-section">
-      <div class="container">
-        <div class="heading_container">
-          <h2>Meet Our Team</h2>
-        </div>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="team-member">
-              <img src="images/team1.jpg" alt="Team Member 1">
-              <h4>Dr. Anil Das</h4>
-              <p>Veterinarian</p>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="team-member">
-              <img src="images/team2.jpg" alt="Team Member 2">
-              <h4>Ms. Priya Sinha</h4>
-              <p>Grooming Specialist</p>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="team-member">
-              <img src="images/team3.jpg" alt="Team Member 3">
-              <h4>Mr. Rajiv Mehta</h4>
-              <p>Trainer</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- end team section -->
-
-    <!-- faq section -->
-    <section class="faq_section layout_padding" id="faq-section">
-      <div class="container">
-        <div class="heading_container">
-          <h2>Frequently Asked Questions</h2>
-        </div>
-        <div class="faq-box">
-          <h4>What services do you provide?</h4>
-          <p>We provide grooming, training, veterinary consultations, and nutritional advice for pets.</p>
-        </div>
-        <div class="faq-box">
-          <h4>Do you offer emergency services?</h4>
-          <p>Yes, we have emergency veterinary services available. Please contact us immediately in case of an emergency.</p>
-        </div>
-      </div>
-    </section>
-    <!-- end faq section -->
-
     <!-- contact section -->
-    <section class="contact_section layout_padding" id="contact-section">
-      <div class="container">
-        <div class="heading_container">
-          <h2>Contact Us</h2>
+    <section class="contact_section layout_padding-top" id="contact-section">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-5 offset-md-1">
+            <div class="form_container">
+              <div class="heading_container">
+                <img src="images/heading-img.png" alt="">
+                <h2>Request A Call Back</h2>
+                <p>Feel free to reach out for any questions or concerns about your pets.</p>
+              </div>
+              <form action="">
+                <div>
+                  <input type="text" placeholder="Full Name " />
+                </div>
+                <div>
+                  <input type="text" placeholder="Phone number" />
+                </div>
+                <div>
+                  <input type="email" placeholder="Email" />
+                </div>
+                <div>
+                  <input type="text" class="message-box" placeholder="Message" />
+                </div>
+                <div class="d-flex ">
+                  <button>SEND</button>
+                </div>
+              </form>
+            </div>
+          </div>
+          <div class="col-md-6 px-0">
+            <div class="map_container">
+              <div class="map-responsive">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.567797191393!2d86.08420031540347!3d20.46252108630316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a1909a2c2b5b4f1%3A0x9e0c7b7c9d9d6d1e!2sCuttack%2C%20Odisha%20753012!5e0!3m2!1sen!2sin!4v1682088249985!5m2!1sen!2sin" width="600" height="300" frameborder="0" style="border:0; width: 100%; height:100%" allowfullscreen loading="lazy"></iframe>
+              </div>
+            </div>
+          </div>
         </div>
-        <p>If you have any questions or would like to book a service, feel free to get in touch with us.</p>
-        <form>
-          <input type="text" placeholder="Your Name" required>
-          <input type="email" placeholder="Your Email" required>
-          <textarea placeholder="Your Message" required></textarea>
-          <button type="submit">Send Message</button>
-        </form>
       </div>
     </section>
     <!-- end contact section -->
 
+    <!-- info section -->
+    <section class="info_section ">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-lg-3">
+            <div class="info_contact">
+              <h5>CONTACT INFO</h5>
+              <div>
+                <img src="images/call.png" alt="" />
+                <p>+91 9876543210</p>
+              </div>
+              <div>
+                <img src="images/mail.png" alt="" />
+                <p>support@cuttackpetcare.com</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="info_time">
+              <h5>Opening Hours</h5>
+              <p>Monday to Saturday</p>
+              <p>10:00 AM to 7:00 PM (IST)</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end info section -->
+
     <!-- footer section -->
-    <footer class="footer_section">
-      <p>&copy; 2025 Cuttack's Pet Care. All Rights Reserved. Designed by Professional Experts.</p>
-    </footer>
+    <section class="container-fluid footer_section ">
+      <p>
+        &copy; 2025 All Rights Reserved. Design by
+        <a href="https://html.design/">Free Html Templates</a>
+      </p>
+    </section>
     <!-- end footer section -->
 
     <!-- JS files -->
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="js/popper.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
   </div>
 </body>
 
