--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <section class="container-fluid footer_section ">
       <p>
         &copy; 2025 All Rights Reserved. Design by
-        <a href="https://html.design/">Free Html Templates</a>
+        <a href="https://html.design/">Abhilash Panda</a>
       </p>
     </section>
     <!-- end footer section -->
