--- a/index.html
+++ b/index.html
@@ -60,7 +60,46 @@
 
     <!-- slider section -->
     <section class="slider_section" id="home-section">
-      <!-- Content remains the same -->
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md-5 offset-md-1">
+                  <div class="detail-box">
+                    <div class="number">
+                      <h5>01</h5>
+                    </div>
+                    <h1>
+                      Cuttack's Pet Care<br>
+                      <span>Best Care for Your Furry Friends</span>
+                    </h1>
+                    <p>
+                      Offering the best pet care services in Cuttack with grooming, training, veterinary care, and nutritional advice tailored for your pets.
+                    </p>
+                    <div class="btn-box">
+                      <a href="#about-section" class="btn-1">Read More</a>
+                      <a href="#contact-section" class="btn-2">Contact Us</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="img-box">
+                    <img src="images/slider-img.png" alt="">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Other carousel items remain the same -->
+        </div>
+      </div>
     </section>
     <!-- end slider section -->
 
@@ -84,6 +123,7 @@
     <section class="pricing_section layout_padding" id="pricing-section">
       <div class="container">
         <div class="heading_container">
+          <img src="images/heading-img.png" alt="">
           <h2>Our Pricing</h2>
           <p>Affordable services for your furry friends in Cuttack, Odisha.</p>
         </div>
@@ -93,6 +133,7 @@
               <h4>Basic Grooming</h4>
               <p>Includes bathing, nail trimming, and brushing.</p>
               <h3>₹500</h3>
+              <img src="images/grooming-basic.jpg" alt="Basic Grooming" class="img-fluid">
             </div>
           </div>
           <div class="col-md-4">
@@ -100,6 +141,7 @@
               <h4>Advanced Grooming</h4>
               <p>Includes bathing, haircut, ear cleaning, and nail trimming.</p>
               <h3>₹1000</h3>
+              <img src="images/grooming-advanced.jpg" alt="Advanced Grooming" class="img-fluid">
             </div>
           </div>
           <div class="col-md-4">
@@ -107,6 +149,7 @@
               <h4>Training Sessions</h4>
               <p>Basic obedience training for dogs (5 sessions).</p>
               <h3>₹3000</h3>
+              <img src="images/training.jpg" alt="Training Sessions" class="img-fluid">
             </div>
           </div>
         </div>
@@ -116,6 +159,7 @@
               <h4>Veterinary Consultation</h4>
               <p>General health check-up and advice.</p>
               <h3>₹500</h3>
+              <img src="images/vet-consultation.jpg" alt="Veterinary Consultation" class="img-fluid">
             </div>
           </div>
           <div class="col-md-4">
@@ -123,6 +167,7 @@
               <h4>Vaccination Package</h4>
               <p>Full vaccination for dogs or cats.</p>
               <h3>₹1500</h3>
+              <img src="images/vaccination.jpg" alt="Vaccination Package" class="img-fluid">
             </div>
           </div>
           <div class="col-md-4">
@@ -130,6 +175,7 @@
               <h4>Pet Nutrition Plan</h4>
               <p>Personalized diet plan for pets.</p>
               <h3>₹800</h3>
+              <img src="images/nutrition-plan.jpg" alt="Pet Nutrition Plan" class="img-fluid">
             </div>
           </div>
         </div>
